# CICDforML

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  test-and-release.yaml
ds_python_template/: __init__.py  example_module.py
tests/: test_example_module.py
