[tool.poetry]
name = "ds-python-template"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "ds_python_template"}]

[[tool.poetry.source]]
name = "nexus"
url = "https://nexus.snap40.com/repository/pypi-all/simple"
default = true

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.253"
black = "^23.1.0"
mypy = "^1.0.1"
pre-commit = "^3.1.1"
pytest = "^7.2.1"

[tool.mypy]
files = "."
strict = true
pretty = true
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
fix = true
line-length = 88
select = [
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "D",  # pydocstyle / flake8-docstrings
    "E",  # pycodestyle
    "F",  # pyflakes / flake8
    "I",  # isort
    "N",  # pep8-naming
    "W",  # pycodestyle
]

[tool.ruff.pydocstyle]
convention = "google"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
